--- a/index.html
+++ b/index.html
@@ -2,34 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Number Guessing Game</title>
-    <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Memory Game</title>
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  <div class="level">
 
-    <div id="wrapper" style="background-color:black; color:#fff;">
-        <h1>Number guessing Game</h1>
-        <p>Try and guess a random number between 1 and 100.</p>
-        <p>You have 10 attempts to guess the right number.</p>
-        </br>
-        <form class="form">
-            <label2 for="guessField" id="guess">Guess a number</label>
-                <input type="text" id="guessField" class="guessField">
-                <input type="submit" id="subt" value="Submit guess" class="guessSubmit">
-        </form>
-        <div class="resultParas">
-            <p>Previous Guesses Numbers: <span class="guesses"></span></p>
-            <p>Guesses Remaining: <span class="lastResult">10</span></p>
-            <p class="lowOrHi"></p>
-        </div>
+    <h2>Easy Level</h2>
+    <!-- <h2>Easy Level</h2>
+        <h2>Easy Level</h2> -->
+
+  </div>
+  <div class="wrapper">
+    <div class="stats-container">
+      <div id="moves-count"></div>
     </div>
+    <div class="game-container"></div>
+    <button id="stop" class="hide">Stop Game</button>
+  </div>
+  <div class="controls-container">
+    <p id="result"></p>
+    <button id="start">Start Game</button>
+  </div>
 
-    <!-- script  -->
-    <script src="script.js"></script>
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
 
 </html>
