--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Memory Game</title>
-
-  <!-- Stylesheet -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flip Card</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -29,8 +27,7 @@
     <button id="start">Start Game</button>
   </div>
 
-  <!-- Script -->
   <script src="script.js"></script>
 </body>
-
 </html>
+
